# src/main/java/com/xebia/yakshop/models/StockInternal.java
@@ -1,0 +1,11 @@
+package com.xebia.yakshop.models;
+
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@Builder
+public class StockInternal {
+    double milk;
+    int skins;
+}
