# src/main/java/com/xebia/yakshop/models/mappers/OrderMapper.java
@@ -1,0 +1,19 @@
+package com.xebia.yakshop.models.mappers;
+
+import com.xebia.yakshop.models.Order;
+import com.xebia.yakshop.models.OrderInternal;
+import com.xebia.yakshop.models.Stock;
+import com.xebia.yakshop.models.StockInternal;
+import org.mapstruct.Mapper;
+import org.mapstruct.NullValuePropertyMappingStrategy;
+import org.mapstruct.ReportingPolicy;
+import org.mapstruct.factory.Mappers;
+
+@Mapper(unmappedTargetPolicy = ReportingPolicy.IGNORE,
+        nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.SET_TO_DEFAULT,
+        uses = StockMapper.class)
+public interface OrderMapper {
+    OrderMapper INSTANCE = Mappers.getMapper(OrderMapper.class);
+
+    OrderInternal toInternalModel(Order from);
+}
